--- a/style.css
+++ b/style.css
@@ -68,3 +68,40 @@ text-decoration: none;
 color: salmon;
 background-color:blue;
 }
+/* courses-style */
+.courses{
+    display: grid;
+    grid-template-columns: repeat(3,1fr);
+    grid-column-gap: 10px;
+}
+.course-info{
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+}
+.course .course-banner img{
+    width: 200px;
+    height: 100px;
+}
+.fa-star{
+    font-size: 12px;
+}
+.fa-star.filled{
+    color: chartreuse;
+}
+.fa-star.empty{
+    color: crimson;
+}
+/* media-quiry */
+/* mobile-device */
+@media only screen and (max-width:668px) {
+    .container{
+        width: 100%;
+    }
+    .players, .blogs, .courses{
+        grid-template-columns: repeat(1,1fr);
+    }
+    .player, .blog{
+        flex-direction: column;
+    }
+}
